--- a/style.css
+++ b/style.css
@@ -17,3 +17,42 @@ video{
 	width: 100%;
 	height: 100%;
 }
+
+.action-cont{
+	height: 15rem;
+	width: 5rem;
+	/* background-color: lightblue; */
+	position: absolute;
+	top: calc((100vh - 15rem)/2);
+	right: 5rem;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.action-cont > *{
+	width: 100%;
+	height: 5rem;
+	/* background-color: lightcoral; */
+	border-radius: 50%;
+	border: 5px solid white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.capture-btn{
+	background-color: white;
+	height: 3rem;
+	width: 3rem;
+	border-radius: 50%;
+}
+
+.record-btn{
+	background-color: red;
+	height: 3rem;
+	width: 3rem;
+	border-radius: 50%;
+}
