--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ video{
 }
 
 .action-cont{
-	height: 15rem;
+	height: 12rem;
 	width: 5rem;
 	/* background-color: lightblue; */
 	position: absolute;
-	top: calc((100vh - 15rem)/2);
+	top: calc((100vh - 12rem)/2);
 	right: 5rem;
 	color: white;
 	display: flex;
@@ -55,4 +55,38 @@ video{
 	height: 3rem;
 	width: 3rem;
 	border-radius: 50%;
+}
+
+.scale-record{
+	animation-name: scale-record;
+	animation-iteration-count: infinite;
+	animation-duration: 1s;
+}
+
+.scale-capture{
+	animation-name: scale-capture;
+	animation-iteration-count: 1;
+	animation-duration: 1s;
+}
+
+@keyframes scale-record{
+
+	0%{
+		transform: scale(0.8);
+	}
+
+	100%{
+		transform: scale(1.1);
+	}
+}
+
+@keyframes scale-capture{
+
+	0%{
+		transform: scale(0.8);
+	}
+
+	100%{
+		transform: scale(1.1);
+	}
 }
