--- a/gallery.css
+++ b/gallery.css
@@ -41,11 +41,21 @@ body {
 .media {
     height: calc( 100% - 2rem - 2rem );
 }
-.media > * {
+
+
+.media > video {
     width: 100%;
     height: 100%;
     object-fit: fill;
 }
+
+.media > img{
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
+
 .action-btn {
     height: 2rem;
     color: white;
