--- a/style.css
+++ b/style.css
@@ -1,133 +1,112 @@
-*{
-	box-sizing: border-box;
+* {
+    box-sizing: border-box;
+}
+body {
+    margin: 0;
+    padding: 0;
 }
 
-body{
-	margin: 0;
-	padding: 0;
+.video-cont {
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+}
+video {
+    width: 100%;
+    height: 100%;
 }
 
-.video-cont{
-	height: 100vh;
-	width: 100vw;
-	background-color: black;
+.action-cont {
+    height: 12rem;
+    width: 5rem;
+    /* background-color: lightblue; */
+    position: absolute;
+    top: calc( ( 100vh - 12rem ) / 2 );
+    right: 5rem;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    z-index: 2;
+}
+.action-cont > * {
+    width: 100%;
+    height: 5rem;
+    border-radius: 50%;
+    border: 5px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.record-btn {
+    background-color: red;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+}
+.capture-btn {
+    background-color: white;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
 }
 
-video{
-	width: 100%;
-	height: 100%;
+.scale-record {
+    animation-name: scale-record;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+}
+.scale-capture {
+    animation-name: scale-capture;
+    animation-iteration-count: 1;
+    animation-duration: 1s;
 }
 
-.action-cont{
-	height: 12rem;
-	width: 5rem;
-	/* background-color: lightblue; */
-	position: absolute;
-	top: calc((100vh - 12rem)/2);
-	right: 5rem;
-	color: white;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	z-index: 2;
+@keyframes scale-record {
+    0% {
+        transform: scale(0.8);
+    }
+    100% {
+        transform: scale(1.1)
+    }
+}
+@keyframes scale-capture {
+    0% {
+        transform: scale(0.8);
+    }
+    100% {
+        transform: scale(1.1)
+    }
 }
 
-.action-cont > *{
-	width: 100%;
-	height: 5rem;
-	/* background-color: lightcoral; */
-	border-radius: 50%;
-	border: 5px solid white;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.timer-cont {
+    position: absolute;
+    bottom: 10rem;
+    left: 5rem;
+    color: aqua;
+    font-size: 0.8rem;
+}
+.timer {
+    display: none;
 }
 
-
-.capture-btn{
-	background-color: white;
-	height: 3rem;
-	width: 3rem;
-	border-radius: 50%;
+.filter-cont {
+    position: absolute;
+    top: calc( (100vh - 16rem ) / 2 );
+    left: 5rem;
+    height: 16rem;
+    width: 5rem;
+    background-color: aqua;
+    z-index: 2;
 }
 
-.record-btn{
-	background-color: red;
-	height: 3rem;
-	width: 3rem;
-	border-radius: 50%;
-}
-
-.scale-record{
-	animation-name: scale-record;
-	animation-iteration-count: infinite;
-	animation-duration: 1s;
-}
-
-.scale-capture{
-	animation-name: scale-capture;
-	animation-iteration-count: 1;
-	animation-duration: 1s;
-}
-
-@keyframes scale-record{
-
-	0%{
-		transform: scale(0.8);
-	}
-
-	100%{
-		transform: scale(1.1);
-	}
-}
-
-@keyframes scale-capture{
-
-	0%{
-		transform: scale(0.8);
-	}
-
-	100%{
-		transform: scale(1.1);
-	}
-}
-
-
-.timer-cont{
-	
-	position: absolute;
-	color: aqua;
-	left: 5rem;
-	font-size: 0.8rem;
-	bottom: 10rem;
-
-}
-
-.timer{
-	display: none;
-}
-
-
-
-
-.filter-cont{
-	position: absolute;
-	top:calc((100vh - 16rem)/2);
-	left: 5rem;
-	width: 5rem;
-	height: 16rem;
-	background-color: aqua;
-	z-index: 2;
-
-}
-
-.filter{
-	height: 4rem;
-	background-image: url("https://picsum.photos/seed/picsum/200/300");
-	background-position: center;
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
-	background-blend-mode: color-burn;
+.filter {
+    height: 4rem;
+    background-image: url("https://picsum.photos/seed/picsum/200/300");
+    background-position: center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-blend-mode: color-burn;
 }
 
 .orange {
@@ -143,7 +122,6 @@ video{
     background-color: transparent;
 }
 
-
 .filter-layer {
     position: absolute;
     top: 0;
@@ -152,7 +130,6 @@ video{
     width: 100vw;
     z-index: 1;
 }
-
 
 .material-icons {
     color: white;
